# defectdb

./: .gitignore  LICENSE  README.md  app.py  defectdb.py  example_app.py  requirements.txt  setup.cfg  test.py  tests.py
data/: defects.sql
src/defectdb/: __init__.py  defectmanager.py
tests/: defectmanager.py
