[metadata]
name = defectdb-TWS
version = 0.1.0
author = Brian Teachman
author_email = brianteachman@gmail.com
description = An SQLite database abstraction layer (DAL) using Flask-SQLAlchemy and Marshmellow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brianteachman/defectdb
project_urls =
    Bug Tracker = https://github.com/brianteachman/defectdb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src